feat: Updates
 - Change all Object return types in the classes